fixes alignment in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8826,11 +8826,14 @@ select.list-dt:focus {
     width: calc(100% - 28px);
     justify-content: center;
     padding: 2rem 0;
-    margin: 0px 30px 0px 0px;
   }
 
   .msomoderate_box.step1 label {
     transform: translateX(10px);
+  }
+
+  .msomoderate_box img {
+    margin: 0px 30px 0px 0px;
   }
 }
 
